fix saved message overlapping other elements

--- a/src/components/profile/SavedMessage.scss
+++ b/src/components/profile/SavedMessage.scss
@@ -1,4 +1,5 @@
 .saved-message {
+  display: inline-block;
   margin-top: 5px;
 
   position: relative;
